# math

./: .cb  Cargo.toml  readme.md  t.py
_/: color.rs  coordinate.rs  default_engine.rs  f_128.rs  lib.rs  math.rs  naive_engine.rs  point_3d.rs  point_4d.rs  precision.rs  q.rs  q_util.rs  trig.rs  u.rs
_/_/__src/: lib.rs  q.rs
_/_/src/: lib.rs
_/_/src_/: lib.rs
_/__/: lib.rs
_/__/extension/: i64.rs  i8.rs
_/__/k/: mod.rs
_/__/trait_/: branded.rs
_/_q/: mod.rs  q_i_128.rs  q_util.rs
_/benches/: math.rs
_/k/branding/: i16.rs  i32.rs  i64.rs  (+2 more)
_/math_/: brandable_t.rs  mod.rs  mul_div_engine.rs  q.rs  q_trait.rs
_/port/: q_engine_compatible.rs
_/q/: add.rs  constructor.rs  default_engine.rs  display.rs  div.rs  eq.rs  mod.rs  mul.rs  muldiv.rs  ord.rs  partial_eq.rs  partial_ord.rs  pi.rs  scale.rs  sub.rs  variant.rs  variant_generic.rs
_/src_/: color.rs  lib.rs
__/: player.rs
__/extension/: i16.rs  i32.rs  mod.rs
_src/: cap_lookup_table.md  color.rs  coordinate.rs  direction.rs  direction_label.rs  int.rs  lib.rs  point_2d.rs  point_2d_i.rs  point_3d.rs  trig.rs
_src/common/: ink.rs  int.rs  util.rs
_src/math/: q.rs
_src/num/: int_i.rs  mod.rs  precision.rs  q.rs
benches/: q.rs
src/: _q.rs  color.rs  coordinate.rs  int.rs  k.rs  lib.rs  m_color.rs  m_k.rs  math.rs  point_2d.rs  point_3d.rs  point_4d.rs  precision.rs  q.rs  trig.rs
src/ambient/: mod.rs  universal.rs
src/common/: int.rs  mod.rs  q.rs  semantic.rs  semantic_fixed.rs
src/coordinate/: mod.rs  point_2d.rs  point_3d.rs  point_4d.rs  point_n.rs
src/core/: mod.rs
src/engine/: default_engine.rs  mod.rs  naive_engine.rs
src/extension/: ext_i128.rs  ext_i16.rs  ext_i32.rs  ext_i64.rs  ext_i8.rs  ext_u128.rs  ext_u16.rs  ext_u32.rs  ext_u64.rs  ext_u8.rs  mod.rs  tr_branded.rs
src/math/: Q.rs  branded_trait.rs  mod.rs  mul_div_engine.rs  precision.rs  precision_trait.rs  q.rs  q_trait.rs  sign_introspection_trait.rs
src/num/: int.rs  int_introspection.rs  mod.rs  precision.rs  q.rs
src/obj_color/: mod.rs  readme.md
src/obj_q/: constant.rs  error.rs  ext_add.rs  ext_branded.rs  ext_cast.rs  ext_constructor.rs  ext_div.rs  ext_mul.rs  ext_muldiv.rs  ext_ord.rs  ext_partial_eq.rs  ext_partial_ord.rs  ext_rem.rs  ext_sign_introspection.rs  ext_sqrt.rs  ext_sub.rs  ext_to_i16.rs  ext_to_i8.rs  ext_to_u8.rs  mod.rs  precision_validation.rs  readme.md  t_q1.rs  t_q10.rs  t_q10i128.rs  t_q10i64.rs  t_q10u128.rs  t_q10u64.rs  t_q11.rs  t_q11i128.rs  t_q11i64.rs  t_q11u128.rs  t_q11u64.rs  t_q12.rs  t_q12i128.rs  t_q12i64.rs  t_q12u128.rs  t_q12u64.rs  t_q13.rs  t_q13i128.rs  (+145 more)
src/prediction_model/: linear_reg.rs
src/q/: mod.rs  q_u_128.rs
src_/: base.rs  k_.rs  lib.rs  num.rs  pi.rs  precision.rs  raw.rs  scale.rs  semantic_fixed.rs  sign.rs  tr_branded.rs
src__/: lib.rs  obj_q.rs
(+516 files in other folders)
