[package]
name = "math"
version = "0.1.0"
edition = "2024"

[dependencies]
paste = "1.0.15"
rand = "0.9.1"
rstest = "0.25.0"
sealed = "0.6.0"
serde = { version = "*" }
[dependencies.toga]
version = "0.1.1"
git = "https://github.com/snqre/toga.git"
[dependencies.boiler]
version = "*"
git = "https://github.com/snqre/boiler.git"
[dependencies.automod]
version = "*"
[dependencies.num-traits]
version = "=0.2.19"
[dependencies.thiserror]
version = "=2.0.12"
[dependencies.ink]
version = "*"
optional = true
[dependencies.parity-scale-codec]
version = "3"
features = ["derive"]
optional = true
[dependencies.scale-info]
version = "2"
features = ["derive"]
optional = true

[dev-dependencies]
criterion = { version = "0.5.1" }

[features]
default = ["ink", "coordinate"]
ink = [
    "dep:ink",
    "dep:parity-scale-codec",
    "dep:scale-info"    
]
float = []
color = []
coordinate = []
std = []

[profile.dev]
overflow-checks = true
