[package]
name = "math"
version = "0.1.0"
edition = "2024"

[dev-dependencies.criterion]
version = "=0.4"
features = ["html_reports"]

[dependencies]
paste = { version = "=1.0.15" }
rstest = { version = "0.25.0" }
toga = { version =  "0.1.1", git = "https://github.com/snqre/toga.git" }
versal = { version = "0.1.0" }

serde = { version = "*", optional = true }
static_assertions = "1.1.0"


[dependencies.num-traits]
version = "=0.2.19"
[dependencies.thiserror]
version = "=2.0.12"
[dependencies.ink]
version = "*"
optional = true
[dependencies.parity-scale-codec]
version = "3"
features = ["derive"]
optional = true
[dependencies.scale-info]
version = "2"
features = ["derive"]
optional = true



[features]
default = ["ink"]
std = [
    "dep:serde"
]
ink = [
    "dep:ink",
    "dep:parity-scale-codec",
    "dep:scale-info"    
]

[profile.bench]
lto = true
codegen-units = 1
overflow-checks = false
debug = false
opt-level = 3

[profile.dev]
overflow-checks = true
